Updated to bootstrap 5 & added dropdown menu in _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -1,16 +1,23 @@
-﻿<!-- _Layout.cshtml, site layout Page-->
+﻿@using LetsGoSEA.WebSite.Services
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+<!-- _Layout.cshtml, site layout Page-->
+@inject NeighborhoodService NeighborhoodService
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - LetsGoSEA</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/> *@
+    <!-- Bootstrap v5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="~/css/site.css"/>
     <link href="https://fonts.googleapis.com/css?family=Yellowtail&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="~/image/favicon.png" />
+    <link rel="shortcut icon" href="~/image/favicon.png"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,10 +38,26 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                     </li>
-                    <!-- Explore Link-->
+
+                    <!-- Explore Link with dropdown-->
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Explore/Index">Explore</a>
+                        <div class="btn-group">
+                            <a class="btn" asp-area="" asp-page="/Explore/Index">Explore</a>
+                            <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                @foreach (var neighborhood in NeighborhoodService.GetNeighborhoods())
+                                {
+                                    <li>
+                                        <a class="dropdown-item" asp-page="Neighborhood" asp-route-id="@neighborhood.Id">@neighborhood.Name</a>
+                                    </li>
+                                }
+
+                            </ul>
+                        </div>
                     </li>
+
                     <!-- Neighborhood Index Link-->
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Neighborhood/Index">Neighborhood Index</a>
