Fixed frontend code for star functionality in Neighborhood.cshtml

--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -96,29 +96,33 @@
     }
 
     <!--Show rating stars-->
-    @{
-        @if (Model.voteCount == 0)
+    @if (Model.voteCount == 0)
+    {
+        <span>Be the first to vote!</span>
+    }
+    else
+    {
+        <span>@Model.voteCount @Model.voteLabel</span>
+    }
+    @for (int i = 1; i < 6; i++)
+    {
+        var currentStar = i;
+        if (i <= Model.avgRating)
         {
-            <span>Be the first to vote!</span>
+            <form method="post">
+                <input value=@currentStar asp-for="Rating" hidden/>
+                <button type="submit" class="fa fa-star checked"></button>
+            </form>
         }
         else
         {
-            <span>@Model.voteCount @Model.voteLabel</span>
+            <form method="post">
+                <input value=@currentStar asp-for="Rating" hidden/>
+                <button type="submit" class="fa fa-star"></button>
+            </form>
         }
-        @for (int i = 1; i < 6; i++)
-        {
-            var currentStar = i;
-            if (i <= Model.avgRating)
-            {
-                <span class="fa fa-star checked" onclick="(e => SubmitRating(currentStar))"></span>
-            }
-            else
-            {
-                <span class="fa fa-star" onclick="(e => SubmitRating(currentStar))"></span>
-            }
-        }
-
     }
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </div>
