Added restriction to neighborhood with one image to Read.cshtml

--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -10,22 +10,26 @@
 
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     @{var neighborhoodImages = @Model.Neighborhood.Image.Split(',');}
-
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        @for (var i = 1; i < neighborhoodImages.Length; i++)
-        {
-            <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
-        }
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="@neighborhoodImages.First()" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>@Model.Neighborhood.Name</h5>
-                <p>@Model.Neighborhood.ShortDesc</p>
-            </div>
+    @if (neighborhoodImages.Length != 1)
+    {
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            @for (var i = 1; i < neighborhoodImages.Length; i++)
+            {
+                <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
+            }
+        </ol>
+    }
+<div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="@neighborhoodImages.First()" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>@Model.Neighborhood.Name</h5>
+            <p>@Model.Neighborhood.ShortDesc</p>
         </div>
+    </div>
+    @if (neighborhoodImages.Length != 1)
+    {
         @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
         {
             <div class="carousel-item">
@@ -36,16 +40,19 @@
                 </div>
             </div>
         }
-
+    }
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    @if (neighborhoodImages.Length != 1)
+    {
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    }
 </div>
 
 <br />
