Updated page to display results in A-Z order by default in Index.cshtml

--- a/src/Pages/Neighborhood/Index.cshtml
+++ b/src/Pages/Neighborhood/Index.cshtml
@@ -20,7 +20,8 @@
         </tr>
         </thead>
         <tbody>
-        @foreach (var neighborhood in Model.Neighborhoods)
+
+        @foreach (var neighborhood in Model.Neighborhoods.OrderBy(neighborhood => neighborhood.Name))
         {
             <tr>
                 <td>@neighborhood.Name</td>
