Removed inline style declarations in AboutUs.cshtml

--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -7,12 +7,12 @@
     Layout = "Shared/_Layout";
 }
 
-<h1 style="text-align:center; font-weight:bold; font-size:30px">@ViewData["Title"]</h1>
+<h1 class="aboutus-content-h1">@ViewData["Title"]</h1>
 <br>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<p style="font-size:20px; color: #84A98C; font-weight:bold; text-align:justify">
+<p class="aboutus-content-p">
     We are the CSI &ndash;&ndash; C Sharp Investigators &ndash;&ndash; a group of computer science student from Seattle University! <br />
     With the expanding city population, we decided to build this website to help Seattleites navigate, explore, and
     investigate our neighborhoods more easily.
@@ -20,7 +20,7 @@
     gather our analytics and visuals. Feel free to connect with us on LinkedIn!
 </p>
 <div>
-    <p style="font-size:20px; color: #84A98C; font-weight:bold; text-align:justify">
+    <p class="aboutus-content-p">
         LetsGoSea provides current and future Seattleites with a digital platform to connect to the heart of their community,
         to explore the surrounding neighborhoods, and to make better decisions about where and how they will live, work, and spend their leisure time in the Emerald City.
 
