Added code to display existing comments and allow a user to add a comment in Neighborhood.cshtml

--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -112,6 +112,32 @@
         }
     }
 
+    <!--Show comments-->
+    @{ 
+        <span>Comments: </span>
+
+        // Show existing comments
+        foreach (var comment in Model.CurrentNeighborhood.Comments)
+            {
+                <div class="row">
+                    <div class="col">
+                        @comment.Comment
+                    </div>
+                </div>
+            }
+
+        // Allow user to enter new comment in the box and click save
+        <form method="post">
+            <div class="row">
+                <div class="col">
+                    <input type="text" value="" asp-for="NewCommentText" />
+                    <button type="submit" class="="btn btn-success">Save Comment</button>
+                </div>"
+            </div>
+        </form>
+    }
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </div>
