--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -14,12 +14,7 @@
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @Html.HiddenFor(x => x.Neighborhood.Id)
-
-        <div class="form-group">
-            <label asp-for="Neighborhood.Id" class="control-label"></label>
-            <input asp-for="Neighborhood.Id" class="form-control" readonly/>
-            <span asp-validation-for="Neighborhood.Id" class="text-danger"></span>
-        </div>
+        
 
         <div class="form-group">
             <label asp-for="Neighborhood.Name" class="control-label"></label>
@@ -35,14 +30,14 @@
 
         <div class="form-group">
             <label asp-for="Neighborhood.City" class="control-label"></label>
-            <input asp-for="Neighborhood.City" class="form-control" readonly/>
-            <span asp-validation-for="Neighborhood.City" class="text-danger"></span>
+            <input asp-for="Neighborhood.City" class="form-control" readonly value="Seattle"/>
+            @* <span asp-validation-for="Neighborhood.City" class="text-danger"></span> *@
         </div>
 
         <div class="form-group">
             <label asp-for="Neighborhood.State" class="control-label"></label>
-            <input asp-for="Neighborhood.State" class="form-control" readonly/>
-            <span asp-validation-for="Neighborhood.State" class="text-danger"></span>
+            <input asp-for="Neighborhood.State" class="form-control" readonly value="WA"/>
+            @* <span asp-validation-for="Neighborhood.State" class="text-danger"></span> *@
         </div>
 
         <div class="form-group">
