--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -65,11 +65,9 @@
 
     <!-- Google Maps for this neighborhood-->
     <iframe
-        width="100%"
-        height="500"
-        style="border:0"
+        id="google-maps-iframe"
         referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps/embed/v1/place?key=@Model.GetKey()&q=@Model.CurrentNeighborhood.Name&zoom=15"
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCREdLVae8DOZP70uabA9l-VRSe83QwcYs&q=@Model.CurrentNeighborhood.Name&zoom=15"
         allowfullscreen>
     </iframe>
 
@@ -77,10 +75,9 @@
     @{
         var addressQuery = Model.CurrentNeighborhood.Address.Replace(",", " ").Replace("  ", " ").Replace(" ", "-");
     }
-    <iframe height="500px" title="Walk Score" 
+    <iframe title="Walk Score" 
             id="walk-score-iframe" 
             src="https://www.walkscore.com/serve-walkscore-tile.php?wsid=g00bb89dd158a4fb0bb5177c0bfcc3760&amp;s=@addressQuery&amp;o=v&amp;c=f&amp;h=500&amp;fh=0&amp;w=400">
-        
     </iframe>
     
 
@@ -131,7 +128,7 @@
             <div class="row">
                 <div class="col">
                     <input type="text" value="" asp-for="NewCommentText" />
-                    <button type="submit" class="="btn btn-success">Save Comment</button>
+                    <button type="submit" class="btn btn-success">Save Comment</button>
                 </div>"
             </div>
         </form>
