--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -39,6 +39,12 @@
             <input asp-for="Neighborhood.State" class="form-control" readonly value="WA"/>
             @* <span asp-validation-for="Neighborhood.State" class="text-danger"></span> *@
         </div>
+        
+        <div class="form-group">
+            <label asp-for="Neighborhood.Address" class="control-label"></label>
+            <input asp-for="Neighborhood.Address" class="form-control" />
+            <span asp-validation-for="Neighborhood.Address" class="text-danger"></span>
+        </div>
 
         <div class="form-group">
             <label asp-for="Neighborhood.ShortDesc" class="control-label"></label>
