Added anchor tag for comment for page redirecting in Neighborhood.cshtml

--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -117,6 +117,7 @@
     
     <!--Show comments-->
     @{ 
+        <a id="commentAnchor"></a>
         <br />
         <hr />
         <span>Comments: </span>
