--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -374,3 +374,19 @@ ul {
     height: 500px;
 
 }
+
+/*Comments*/
+.comment-title {
+    font-size: 40px;
+}
+
+.comment-row {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.comment-box {
+    margin-bottom: 30px;
+}
