--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
 
 <footer class="border-top footer text-muted bg-footer">
     <div class="container">
-        <p>
+        <p class="info-footer">
             &copy; 2022 - The C Sharp Investigators - <a asp-area="" asp-page="/Privacy">Privacy</a> <a href="https://github.com/nuri1126/TheCSharpInvestigators">Contribute</a>
         </p>
 
