Changed default font for navbar title in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -53,7 +53,7 @@ for details on configuring this project to bundle and minify static web assets. 
 
 a.navbar-brand {
     white-space: normal;
-    font-family: 'Yellowtail', cursive;
+    font-family: 'Montserrat', sans-serif;
     font-size: xx-large;
     text-align: center;
     word-break: break-all;
