Adding overlay div for walkscore widget in Neighborhood.cshtml

--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -114,6 +114,7 @@
             id="walk-score-iframe" 
             src="https://www.walkscore.com/serve-walkscore-tile.php?wsid=g00bb89dd158a4fb0bb5177c0bfcc3760&amp;s=@addressQuery&amp;o=v&amp;c=f&amp;h=500&amp;fh=0&amp;w=400">
     </iframe>
+    <div id="walk-overlay"></div>
     
     <!--Show comments-->
     @{ 
